packages/fvcksubs_js_runtime/lib/fvcksubs_js_runtime_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Creates a runtime + context and installs the `__host_call`/`fetch`
/// globals. Returns NULL on allocation failure.
@ffi.Native<ffi.Pointer<QjsrEngine> Function()>()
external ffi.Pointer<QjsrEngine> qjsr_new_engine();

@ffi.Native<ffi.Void Function(ffi.Pointer<QjsrEngine>)>()
external void qjsr_free_engine(ffi.Pointer<QjsrEngine> engine);

/// Installs (or replaces) the function `__host_call` forwards to. NULL
/// disables it — calling `__host_call` from JS then throws.
@ffi.Native<ffi.Void Function(ffi.Pointer<QjsrEngine>, QjsrHostCallback)>()
external void qjsr_set_host_callback(
  ffi.Pointer<QjsrEngine> engine,
  QjsrHostCallback callback,
);

/// Installs (or replaces) the function `fetch` forwards to. NULL disables it
/// — calling `fetch` from JS then throws synchronously (the promise it would
/// have returned is never created).
@ffi.Native<
  ffi.Void Function(ffi.Pointer<QjsrEngine>, QjsrFetchStartCallback)
>()
external void qjsr_set_fetch_start_callback(
  ffi.Pointer<QjsrEngine> engine,
  QjsrFetchStartCallback callback,
);

/// Caps what a script can consume. Any parameter may be 0 to leave that limit
/// off. Applies to every subsequent call into this engine.
///
/// `memory_limit_bytes` and `max_stack_bytes` are runtime-wide and always in
/// force. `timeout_ms` is a *per-entry* budget on JS execution, re-armed each
/// time control enters JS (an eval, or the job drain inside
/// qjsr_resolve_fetch) — so a script waiting on a slow fetch is not charged
/// for the host's own round-trip time, only for the JS it actually runs.
/// Exceeding it interrupts the script, surfacing as an ordinary JS exception
/// through the usual error_out paths.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<QjsrEngine>, ffi.Uint64, ffi.Uint64, ffi.Uint64)
>()
external void qjsr_set_limits(
  ffi.Pointer<QjsrEngine> engine,
  int memory_limit_bytes,
  int max_stack_bytes,
  int timeout_ms,
);

/// Evaluates `code` as a global-scope script.
///
/// On success, returns a malloc'd string: the result JSON-stringified where
/// possible (covers objects/arrays/primitives), or its plain ToString for
/// values JSON can't represent (undefined, functions). Free with
/// qjsr_free_string.
///
/// On a thrown JS exception, returns NULL and, if error_out is non-NULL,
/// sets *error_out to a malloc'd message (also freed with qjsr_free_string).
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<QjsrEngine>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<ffi.Char> qjsr_eval(
  ffi.Pointer<QjsrEngine> engine,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_out,
);

/// Like qjsr_eval, but understands a script whose result is a Promise —
/// e.g. `(async () => { ... await fetch(url) ... })()`, or a `.then()`
/// chain. (Bare top-level `await`, outside any function, isn't supported —
/// wrap the script in an async IIFE as above.) Behavior:
///
/// - Result isn't a Promise, or is one that's already settled (no real async
/// work happened, or everything awaited was already resolved): behaves
/// exactly like qjsr_eval — the settled value, or NULL + *error_out on
/// rejection.
/// - Still pending (e.g. waiting on a fetch): returns NULL, *error_out
/// untouched, *out_pending set true, and *out_eval_id set to a nonzero id.
/// The eventual settlement is collected via qjsr_take_completion.
///
/// Any number of evals may be pending at once — they share one JS event loop,
/// exactly as concurrent work in a browser would, so a fan-out across
/// providers doesn't need an engine each.
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<QjsrEngine>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Bool>,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external ffi.Pointer<ffi.Char> qjsr_eval_async(
  ffi.Pointer<QjsrEngine> engine,
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_out,
  ffi.Pointer<ffi.Bool> out_pending,
  ffi.Pointer<ffi.Uint32> out_eval_id,
);

/// Resolves or rejects the fetch identified by request_id and drains the JS
/// job queue so any `.then()`/`await` continuations run immediately.
///
/// error_message non-NULL rejects the fetch's promise with that message;
/// otherwise it resolves with `{status, headers, url, body}` built from the
/// other params (headers_json must be a JSON object string; final_url is the
/// URL after any redirects the Dart side followed).
///
/// Settling this fetch may complete any number of pending evals; collect them
/// with qjsr_take_completion afterwards.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<QjsrEngine>,
    ffi.Uint32,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external void qjsr_resolve_fetch(
  ffi.Pointer<QjsrEngine> engine,
  int request_id,
  int status,
  ffi.Pointer<ffi.Char> headers_json,
  ffi.Pointer<ffi.Char> final_url,
  ffi.Pointer<ffi.Char> body,
  ffi.Pointer<ffi.Char> error_message,
);

/// Takes one settled eval, if any.
///
/// Sets *out_id to its qjsr_eval_async id and returns its value (malloc'd),
/// or returns NULL with *out_error set (malloc'd) if it rejected. When
/// nothing has settled, *out_id is 0 and the return is NULL — check *out_id,
/// not the return value. Call in a loop until *out_id is 0, since one fetch
/// can unblock several evals at once.
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<QjsrEngine>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<ffi.Char> qjsr_take_completion(
  ffi.Pointer<QjsrEngine> engine,
  ffi.Pointer<ffi.Uint32> out_id,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void qjsr_free_string(ffi.Pointer<ffi.Char> s);

final class QjsrEngine extends ffi.Opaque {}

typedef QjsrHostCallbackFunction =
    ffi.Pointer<ffi.Char> Function(
      ffi.Pointer<ffi.Char> name,
      ffi.Pointer<ffi.Char> argsJson,
    );

/// A host function callable from JS via `__host_call(name, argsJson)`.
///
/// Must return a malloc'd, NUL-terminated string (freed internally right
/// after it's copied into the JS return value), or NULL to signal failure
/// (surfaced to JS as a thrown TypeError).
typedef QjsrHostCallback =
    ffi.Pointer<ffi.NativeFunction<QjsrHostCallbackFunction>>;
typedef QjsrFetchStartCallbackFunction =
    ffi.Void Function(
      ffi.Uint32 requestId,
      ffi.Pointer<ffi.Char> url,
      ffi.Pointer<ffi.Char> method,
      ffi.Pointer<ffi.Char> headersJson,
      ffi.Pointer<ffi.Char> body,
    );
typedef DartQjsrFetchStartCallbackFunction =
    void Function(
      int requestId,
      ffi.Pointer<ffi.Char> url,
      ffi.Pointer<ffi.Char> method,
      ffi.Pointer<ffi.Char> headersJson,
      ffi.Pointer<ffi.Char> body,
    );

/// Invoked synchronously when JS calls the global `fetch(url, options)`. Must
/// not block — kick off the real (async, on the Dart side) request and
/// return; the result arrives later via qjsr_resolve_fetch. `headersJson` is
/// always a JSON object string (`"{}"` if none given); `method` defaults to
/// `"GET"`; `body` is NULL if none given.
typedef QjsrFetchStartCallback =
    ffi.Pointer<ffi.NativeFunction<QjsrFetchStartCallbackFunction>>;
